--- a/app/src/main/res/layout/item_post_listview.xml
+++ b/app/src/main/res/layout/item_post_listview.xml
@@ -116,6 +116,21 @@
             android:scaleType="fitXY"
             android:src="@color/colorLittleGray"/>
         <TextView
+            android:id="@+id/currentTimeTextView"
+            android:layout_width="wrap_content"
+            android:paddingLeft="@dimen/extra_small_margin"
+            android:paddingRight="@dimen/extra_small_margin"
+            android:layout_height="20dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="bottom|start"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:layout_marginRight="40dp"
+            android:background="@color/colorLittleGray"
+            android:text="00:00"
+            android:alpha="0.5"
+            android:textColor="@color/colorDark"
+            android:visibility="gone"/>
+        <TextView
             android:id="@+id/totalTrackTimeTextView"
             android:layout_width="wrap_content"
             android:paddingLeft="@dimen/extra_small_margin"
@@ -128,7 +143,8 @@
             android:background="@color/colorLittleGray"
             android:text="13:08"
             android:alpha="0.5"
-            android:textColor="@color/colorDark" />
+            android:textColor="@color/colorDark"
+            android:visibility="gone"/>
         <ImageView
             android:id="@+id/playMusic"
             android:layout_width="wrap_content"
@@ -139,6 +155,7 @@
             android:alpha="0.3"
             android:layout_marginBottom="@dimen/large_margin"
             android:layout_marginRight="@dimen/extra_small_margin"
+            android:visibility="gone"
             />
 
         <ImageView
@@ -148,6 +165,18 @@
             android:layout_gravity="center"
             android:alpha="0.5"
             android:src="@mipmap/ic_play_in_post" />
+        <TextView
+            android:id="@+id/listenNumberTextView"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="@dimen/small_margin"
+            android:layout_height="20dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:background="@color/colorLittleGray"
+            android:text="345 lượt xem"
+            android:alpha="0.5"
+            android:textColor="@color/colorDark" />
 
         <android.support.v7.widget.AppCompatSeekBar
             android:id="@+id/trackTimeSeekBar"
@@ -157,7 +186,8 @@
             android:max="10"
             android:progress="6"
             android:progressTint="@color/colorBlue"
-            android:thumbTint="@color/colorBlue" />
+            android:thumbTint="@color/colorBlue"
+            android:visibility="gone"/>
     </FrameLayout>
 
 
@@ -224,27 +254,6 @@
                 android:gravity="center"
                 android:maxLength="6"
                 android:text="978"
-                android:textColor="@color/colorDark" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/playIconImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_hear" />
-
-            <TextView
-                android:id="@+id/listenNumberTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:maxLength="6"
-                android:text="108K"
                 android:textColor="@color/colorDark" />
         </LinearLayout>
     </LinearLayout>
