--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/avatarImage_newPost"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@mipmap/ic_avatar_error"
                 android:layout_gravity="top"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"/>
@@ -78,7 +78,6 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:maxLines="5"
-                    android:text="Hoàng Bánh Bèo Nhèo"
                     android:textColor="@color/colorDark"
                     android:textSize="15dp"
                     android:textStyle="bold" />
@@ -88,7 +87,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="12dp"
-                    android:text="10:12 12/12/2016"
                     android:maxLines="1"
                     android:ellipsize="end"/>
             </LinearLayout>
