--- a/app/src/main/res/layout/activity_friend_wall.xml
+++ b/app/src/main/res/layout/activity_friend_wall.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/ListViewPost_friendWall"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation_layout"
         android:scrollbars="none"></ListView>
     <include layout="@layout/layout_bottom_navigation"/>
