--- a/app/src/main/res/layout/activity_privacy_wall.xml
+++ b/app/src/main/res/layout/activity_privacy_wall.xml
@@ -12,5 +12,6 @@
         android:scrollbars="none"
         android:layout_above="@+id/bottom_navigation_layout">
     </ListView>
-    <include layout="@layout/layout_bottom_navigation"/>
+    <include layout="@layout/layout_bottom_navigation"
+        />
 </RelativeLayout>
