--- a/app/src/main/res/layout/item_post_listview.xml
+++ b/app/src/main/res/layout/item_post_listview.xml
@@ -218,7 +218,7 @@
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="left">
 
             <ImageView
                 android:id="@+id/likeIconImage"
@@ -239,7 +239,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="right">
 
             <ImageView
                 android:id="@+id/commentIconImage"
