--- a/app/src/main/res/layout/activity_update_background.xml
+++ b/app/src/main/res/layout/activity_update_background.xml
@@ -33,7 +33,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Thay đổi ảnh đại diện"
+                android:text="Thay đổi ảnh bìa"
                 android:gravity="center_vertical"
                 android:textColor="@color/colorDark"
                 android:textSize="18dp"
